Fix alignment

--- a/src/components/spokeArticle/style.css
+++ b/src/components/spokeArticle/style.css
@@ -6,6 +6,7 @@
     max-width: 700px;
     opacity: .9;
     border-radius: 7px;
+    text-align: left;
 }
 
 .spokeArticle h2 {
